crates/iktia-core/tests/fixtures/conformance/rejected/computed-block-body.wc.tsx
import { computed, state } from "@iktia/core"

export function ComputedBlockBody() {
  const count = state(0)
  const doubled = computed(() => {
    return count() * 2
  })

  return <button>{doubled()}</button>
}
